examples/test/testpolicy19582.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19582
  namespace: namespace409
spec:
  podSelector:
    matchLabels:
      key48: value8
      key32: value32
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key48: value39
          key41: value45
          key12: value32
      podSelector:
        matchLabels:
          key26: value38
